--- a/hwk3_2.qmd
+++ b/hwk3_2.qmd
@@ -7,19 +7,18 @@ execute:
   eval: true
   warning: false
   message: false
+  results: hide
 format:
   html:
     toc: true 
+    code-fold: true
+    code-summary: "Display Code"
 editor_options: 
   chunk_output_type: console
 ---
 
-Note: I still have some polishing to do on this assignment - I'm planning to use a regrade to do so! Just a heads up! Thanks! 
-
+### Set Up Workspace
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
-
 # ---- Load Libraries ----
 
 # Load libraries
@@ -29,24 +28,18 @@ library(tidyverse)
 library(tmap)
 library(kableExtra)
 library(spData)
-library(spDataLarge)
 library(here)
-library(viridisLite) 
 library(terra)
 library(sf)
-library(purrr)
 library(stars)
 library(raster)
 library(dplyr)
 library(gifski)
+library(slideview)
 ```
 
-Read in Project Data:
-
+### Read in Project Data:
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
-
 # ---- Read in Night Light Data ----
 
 # Read in the night light raster data
@@ -81,18 +74,11 @@ income_layer <- sf::read_sf(here::here("data", "ACS_2019_5YR_TRACT_48_TEXAS.gdb"
 texas_census <- st_sf(income_layer, geom = geom_layer)  %>%
   dplyr::select(id = GEOID,
                 med_inc = B19013e1)
-              # MEDIAN HOUSEHOLD INCOME IN THE PAST 12 MONTHS (IN 2011 INFLATION-ADJUSTED DOLLARS)
-              # Check out the layers in the gdb, select 
-              #st_layers('data/ACS_2019_5YR_TRACT_48_TEXAS.gdb')
 
 ```
 
 Inspect & Prepare Vector Data CRS
-
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
-
 # ---- Change CRS of Vector Data ----   
               
 # Create a vector data list
@@ -105,40 +91,29 @@ for (i in vector_list) {
          else get(i))
 }
        
-# # Transform CRS for raster data to EPSG: 3083
-# for (r in seq_along(raster_list)) {
-#   if (inherits(raster_list[[r]], "Raster")) {
-#     if (!compareCRS(crs(raster_list[[r]]), CRS("+init=epsg:3083"))) {
-#       raster_list[[r]] <- projectRaster(raster_list[[r]], crs = CRS("+init=epsg:3083"))
-#     }
-# }}
 ```
 
-Preliminary data exploration
-
+Process Data:
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
-
-# ---- Preliminary Data Exploration ----   
+# ---- Crop Vector Layers to Houston ----   
 
 # Projected BBox Bounds
 bbox_proj <- st_bbox(c(xmin = 1838039,
                   xmax = 2006680,
                   ymin = 7216740,
-                  ymax = 7385430))
+                  ymax = 7385430), crs = 3083)
 
+# Crop to Houston
 houston_buildings <- st_crop(buildings, bbox_proj) 
 houston_census <- st_crop(texas_census, bbox_proj)
-
 
 ```
 
 
-Calculate change in lights
+### Calculate change in lights
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
+
+# ---- Calculate difference in night lights ----   
 
 # Diff in lights
 diff_lights <- before_lights - after_lights
@@ -149,204 +124,464 @@ diff_lights <- before_lights - after_lights
 
 # ---- Create a blackout mask ----   
 
-# Reclassify raster values for above and below the 200 threshold
-# WE COULD DO THE CLASS BRACKETING METHOD TO STREAMLINE?
-rcl <- matrix(c(-Inf, 200, 1,
-                200, Inf, 2),
+rcl <- matrix(c(-Inf, 200, 0,
+                200, Inf, 1),
               ncol = 3, byrow = TRUE)
+
+# Apply reclassification matrix
 reclassified <- terra::classify(diff_lights, rcl = rcl)
-# Treat as factor - IS THIS NECESSARY?
 values(reclassified) <- as.factor(values(reclassified))
 
 # Reclassify values below 200 to be NA
-reclassified[reclassified == 1] <- NA
+reclassified[reclassified == 0] <- NA
 
 # Convert SpatRaster to polygons
 diff_poly <- as.polygons(reclassified) %>% 
-  st_as_sf()
+  st_as_sf() %>%
+  st_make_valid()
 
+diff_poly <- st_transform(diff_poly, crs = 3083)
+
+# Assuming that it is okay to treat all spatial data is planar
+sf::sf_use_s2(TRUE)
+sf::sf_use_s2(FALSE)
 ```
 
 # Set of maps comparing night light intensities before and after the first to storms
+
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
-#| 
 # ---- Crop before and after images to Houston ----   
 
 # Define Houston Boundary Extent
 bbox <- st_bbox(c(xmin = -96.5,
                   xmax = -94.5,
                   ymin = 29,
-                  ymax = 30.5))
+                  ymax = 30.5), 
+                crs = st_crs(4326))
 
 # Crop before and after images
-before_lights <- crop(before_lights, bbox) 
+before_lights <- crop(before_lights, bbox)
 after_lights <- crop(after_lights, bbox)
 
+# Crop to exclude no lights
+before_lights_only <- before_lights
+before_lights_only[before_lights_only < 50] <- NA
+
+after_lights_only <- after_lights
+after_lights_only[after_lights_only < 50] <- NA
+```
+
+```{r}
+# ---- Prepare Background Layers for Map ----   
+
+roads_proj <- st_transform(roads, st_crs(before_lights))
+census_proj <- st_transform(houston_census, st_crs(before_lights))
+
+```
+
+```{r}
+
 # ---- Define Night Light Color Palette ----   
-light_palette <- colorRampPalette(c("#0D0D0D", "#6C378F", "#8C206F", "#F29A2E","#FFE802", "lightyellow"))
 
-# ---- Create Before Map ----   
-before_map <- tm_shape(before_lights) + 
+light_palette <- colorRampPalette(c("#07222B", "#FF6ACC", "#E0D71B", "lightyellow"), bias = 1.1)
+
+# ---- Prepare Background Layers for Map ----   
+
+# Project background layers to the same crs
+roads_proj <- st_transform(roads, st_crs(before_lights))
+census_proj <- st_transform(houston_census, st_crs(before_lights))
+
+# ---- Define Map Boundary Extent ----   
+
+# Define map bbox params
+bbox_map <- c(xmin = -96.4, ymin = 29.05, xmax = -94.7, ymax = 30.45)
+
+
+# ---- Create Before Map ---- 
+
+before_map <-
+  
+# Add census data for background
+tm_shape(census_proj, bbox = bbox_map) + 
+  tm_polygons(alpha = 0,
+              border.col = "#020608") +
+  
+# Add highways for background
+tm_shape(roads_proj) + 
+  tm_lines(col = "#020608",
+           lwd = 2) +
+  
+# Add night lights layer transparent overlay to mute roads
+tm_shape(before_lights) + 
   tm_raster(palette = light_palette(10),
             style = "cont",
             stretch = "hist",
-            colorNA ="#011526",
-            breaks = c(0, 9000),
+            breaks = c(0, 10000),
             legend.is.portrait = FALSE,
-            title = "Light Intensity")+
-  tm_layout(legend.position = c(.8, 0.03),
-            legend.text.color = "#D3DFEB",
-            legend.show = TRUE,
-            legend.hist.width = 1,
-            legend.format = list(digits = 0),
-            legend.title.color = "#D3DFEB",
-            legend.title.size = 1,
-            frame = FALSE) + 
-  tm_credits("Houston, Texas", 
-             position = c(.04, 0.9),
-             size = 1.2,
-             col = "#D3DFEB",
-             fontface = "bold") + 
-   tm_credits("Before: 2021-02-07", 
-             position = c(.04, 0.85),
-             size = 1,
-             col = "#D3DFEB")
-
-# ---- Create After Map ----   
-after_map <- tm_shape(after_lights) + 
+            title = "Light Intensity",
+            alpha = 0.7,
+            legend.show = FALSE) +
+  
+# Add nights lights layer to top
+tm_shape(before_lights_only, bbox = bbox) + 
   tm_raster(palette = light_palette(10),
             style = "cont",
             stretch = "hist",
-            colorNA ="#011526",
-            breaks = c(0, 9000),
+            colorNA = rgb(0, 0, 0, 0),
+            breaks = c(0, 250, 500, 800, 1000, 5000, 8000, 10000),
             legend.is.portrait = FALSE,
-            title = "Light Intensity")+
-  tm_layout(legend.position = c(.8, 0.03),
+            title = "Nighttime Light Intensity",
+            alpha = 0.9,
+            labels = c("Low","","","","","","","High")) +
+  
+  # Format layout
+  tm_layout(legend.position = c(0.02, 0.04),
             legend.text.color = "#D3DFEB",
             legend.show = TRUE,
             legend.hist.width = 1,
-            legend.format = list(digits = 0),
+            legend.format = list(text.align = "center"),
             legend.title.color = "#D3DFEB",
-            legend.title.size = 1,
-            frame = FALSE) + 
-  tm_credits("Houston, Texas", 
-             position = c(.04, 0.9),
-             size = 1.2,
-             col = "#D3DFEB",
-             fontface = "bold") + 
-   tm_credits("After: 2021-02-16", 
-             position = c(.04, 0.85),
+            legend.title.size = 0.8,
+            legend.text.size = 0.7,
+            frame = FALSE,
+            bg.color = "#07222B",
+            main.title = "Before the Storm                      Feb. 7, 2023",
+            main.title.fontface = "bold",
+            main.title.color = "#D3DFEB") +
+  
+  # Edit scale bar
+  tm_scale_bar(color.dark = "#9BB4CC",
+               color.light = "#435058",
+               text.color = "grey",
+               breaks = c(0,10)) +
+  
+  # Edit compass
+  tm_compass(type = "arrow",
              size = 1,
-             col = "#D3DFEB")
+             position = c(0.89, 0.07),
+             color.dark = "#9BB4CC",
+             color.light = "grey",
+             text.color = "grey",
+             text.size = .6) +
+  
+  # Add label for Houston, TX
+  tm_credits("Houston, TX ",
+           position = c(0.09, 0.6),
+           col = "#07222B",
+           bg.color = "#E0D71B",
+           bg.alpha = 0.8,
+           fontface = "bold",
+           size = 1) +
+  tm_credits("  ____",
+           position = c(0.28, 0.61),
+           col = "#E0D71B",
+           fontface = "bold",
+           size = 1.2,
+           width = 0.24,
+           alpha = 0.8)
+
+# ---- Create After Map ---- 
+
+after_map <-
+  
+# Add census data for background
+tm_shape(census_proj, bbox = bbox_map) + 
+  tm_polygons(alpha = 0,
+              border.col = "#020608") +
+  
+# Add highways for background
+tm_shape(roads_proj) + 
+  tm_lines(col = "#020608",
+           lwd = 2) +
+  
+# Add night lights layer transparent overlay to mute roads
+tm_shape(after_lights) + 
+  tm_raster(palette = light_palette(10),
+            style = "cont",
+            stretch = "hist",
+            breaks = c(0, 10000),
+            legend.is.portrait = FALSE,
+            title = "Light Intensity",
+            alpha = 0.7,
+            legend.show = FALSE) +
+  
+# Add nights lights layer to top
+tm_shape(after_lights_only, bbox = bbox) + 
+  tm_raster(palette = light_palette(10),
+            style = "cont",
+            stretch = "hist",
+            colorNA = rgb(0, 0, 0, 0),
+            breaks = c(0, 250, 500, 800, 1000, 5000, 8000, 10000),
+            legend.is.portrait = FALSE,
+            title = "Nighttime Light Intensity",
+            alpha = 0.9,
+            labels = c("Low","","","","","","","High")) +
+  
+  # Format layout
+  tm_layout(legend.position = c(0.02, 0.04),
+            legend.text.color = "#D3DFEB",
+            legend.show = TRUE,
+            legend.hist.width = 1,
+            legend.format = list(text.align = "center"),
+            legend.title.color = "#D3DFEB",
+            legend.title.size = 0.8,
+            legend.text.size = 0.7,
+            frame = FALSE,
+            bg.color = "#07222B",
+            main.title = "After the Storm                      Feb. 16, 2023",
+            main.title.fontface = "bold",
+            main.title.color = "#D3DFEB") +
+  
+  # Edit scale bar
+  tm_scale_bar(color.dark = "#9BB4CC",
+               color.light = "#435058",
+               text.color = "grey",
+               breaks = c(0,10)) +
+  
+  # Edit compass
+  tm_compass(type = "arrow",
+             size = 1,
+             position = c(0.89, 0.07),
+             color.dark = "#9BB4CC",
+             color.light = "grey",
+             text.color = "grey",
+             text.size = .6) +
+  
+  # Add label for Houston, TX
+  tm_credits("Houston, TX ",
+           position = c(0.09, 0.6),
+           col = "#07222B",
+           bg.color = "#E0D71B",
+           bg.alpha = 0.8,
+           fontface = "bold",
+           size = 1) +
+  tm_credits("  ____",
+           position = c(0.28, 0.61),
+           col = "#E0D71B",
+           fontface = "bold",
+           size = 1.2,
+           width = 0.24,
+           alpha = 0.8)
 
 # ---- Combine Before and After Maps into an Animation ----
 
 maps_combo <- list(before_map, after_map)  
-outage_animation <- tmap_animation(maps_combo, delay = 300, width = 600, height = 600) 
+outage_animation <- tmap_animation(maps_combo,
+                                   delay = 300,
+                                   width = 600,
+                                   height = 600,
+                                  filename = "outage_animation.gif") 
 
-before_map
-after_map
 ```
 
+Below is an animation showing changes before and after the outage:
 
-Clean Lights
+![Data Source: NASA VIIRS](outage_animation.gif)
+
+This map shows the difference in night light intensity between a typical night before the storm (February 7, 2023), compared to night light intensity after the storm (Feb 16, 2023), when the Houston, Region experienced widespread power outages. The night light intensity ranges from no light (dark blue), to pink (mid light intensity), to yellow (highest light intensity).
+
+### Create buffer around highways and crop diff to it
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
+# Assuming that it is okay to treat all spatial data is planar
+sf::sf_use_s2(TRUE)
+sf::sf_use_s2(FALSE)
 
-# ---- Exclude highways from blackout image ----
-
-# Crop to Houston
-diff_crop <- st_crop(diff_poly, bbox) %>%
+highway_buffer <- st_buffer(roads, dist = 200) %>%
+  st_union() %>%
   st_make_valid() %>%
-  st_transform(crs = 3083)
+  st_as_sf()
 
-# Buffer HWY data
-highways <- st_buffer(roads,
-                      dist = 200) %>%
-            st_union()
-
-# Remove highways from differenced images
-diff_hwy_masked <- st_difference(diff_crop, highways)
-
-# Preliminary Map of Blackout Areas
-tm_shape(diff_hwy_masked) + 
-  tm_polygons(col = "orange", border.col = "darkorange") +
-  tm_layout(main.title = "Houston Lights Difference (Highways Masked)",
-            frame = FALSE)
-
+diff_poly <- st_make_valid(diff_poly)
+ 
+diff_hwy_mask <- st_difference(diff_poly, highway_buffer)
 ```
 
 ### Identify homes likely impacted by blackouts
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
+
+# Make all spatial data planar
+sf::sf_use_s2(TRUE)
+sf::sf_use_s2(FALSE)
 
 # ---- Select buildings that overlap with areas that experienced a blackout  ----   
-building_blackouts <- st_intersection(diff_hwy_masked, houston_buildings) 
+
+# Get intersection of buildings layer and areas that experienced a blackout - with highways masked
+building_blackouts <- st_intersects(diff_hwy_mask, houston_buildings) 
+
+# Select unique buildings and parse into a list
+blackout_buildings_index <- unlist(building_blackouts) %>%
+  unique()
+
+# Create new column in Houston_buildings that indicates whether or not it experienced a blackout
+houston_buildings$Blackout <- "No"
+houston_buildings$Blackout[blackout_buildings_index] <- "Yes"  
+
 
 ```
 
-# Map of the homes in in Houston that lost power
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
+houston_buildings_blackout <- houston_buildings %>% filter(Blackout == "Yes")
+```
 
+#### Map of the homes in in Houston that lost power
+
+  
+```{r}
 # ---- Map of the homes in in Houston that lost power  ----   
 
-tm_shape(building_blackouts) + 
-  tm_fill() +
-  tm_layout(main.title = "Homes in Houston that Lost Power",
-            frame = FALSE)
+# Add Layer of Homes in Houston with Power
+
+# Add census data for background
+buildings_map <- tm_shape(houston_census, bbox = bbox_proj) + 
+  tm_polygons(alpha = 0,
+              border.col = "#020608",
+              lwd = .8,
+              border.alpha = 0.4) +
+  
+# Add highways for background
+tm_shape(roads) + 
+  tm_lines(col = "#020608",
+           lwd = 1,
+           alpha = 0.2) +
+
+# Add buildings
+tm_shape(houston_buildings_blackout, bbox = bbox_proj) + 
+  tm_fill(col = "Blackout",
+          palette = c("Yes" = "#00BFB2"),
+          title = "Experienced Outage") +
+  
+# Formatting
+tm_layout(frame = FALSE,
+          legend.text.color="grey",
+          legend.title.color='grey',
+          bg.color = "#07222B",
+          legend.show = FALSE,
+          main.title = "Homes in Houston that Lost Power",
+          main.title.fontface = "bold",
+          main.title.color = "#D3DFEB") +
+  
+  # Add title
+tm_credits("Over 157 Thousand Homes Were Left Without Power\nDuring the February 2021 Storm",
+             position = c(0.02, 0.9),
+             size = 0.8,
+             col = "white") +
+ 
+  # Edit scale bar
+  tm_scale_bar(color.dark = "#9BB4CC",
+               color.light = "#435058",
+               text.color = "grey",
+               breaks = c(0,10)) +
+  # Edit compass
+  tm_compass(type = "arrow",
+             size = 1,
+             position = c(0.89, 0.09),
+             color.dark = "#9BB4CC",
+             color.light = "grey",
+             text.color = "grey",
+             text.size = .6) +
+  
+  # Add label for Houston, TX
+  tm_credits("Houston, TX ",
+           position = c(0.09, 0.6),
+           col = "#07222B",
+           bg.color = "#E0D71B",
+           bg.alpha = 0.8,
+           fontface = "bold",
+           size = 1) +
+  tm_credits("  ____",
+           position = c(0.28, 0.61),
+           col = "#E0D71B",
+           fontface = "bold",
+           size = 1.2,
+           width = 0.24,
+           alpha = 0.8)
 
 # Investigate the number of homes in Houston that lost power
 print(paste("The number of homes in Houston that lost power was approximately", nrow(building_blackouts)))
+
+buildings_map
 ```
 
-### Identify census tracts impacted by blackouts
 
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
+# ---- Identify census tracts that contain buildings that experienced a blackout  ----  
 
-# ---- Identify census tracts that containing buildings that experienced a blackout  ----  
+# Get intersection of buildings layer and areas that experienced a blackout - with highways masked
+census_blackouts <- st_intersects(houston_census, houston_buildings_blackout) 
 
-# Get list of census tracts that contain blackout buildings
-census_blackouts <- st_intersection(houston_census, building_blackouts)
+# Create new column in houston_buildings that indicates whether or not it experienced a blackout
+# Get the census tracts that have at least one building with a blackout
+blackout_census_index <- which(lengths(census_blackouts) > 0)
 
-# Get unique census tract IDs that had blackouts
-blackout_tract_ids <- unique(census_blackouts$id) 
+# Create new column in houston_census that indicates whether or not it experienced a blackout
+houston_census$Blackout <- "No"  # Default to "No"
+houston_census$Blackout[blackout_census_index] <- "Yes"  # Set "Yes" for tracts with blackout buildings
 
-houston_census$blackout_status <- ifelse(houston_census$id %in% blackout_tract_ids, "Yes Blackout", "No Blackout")
+```
 
-tm_shape(houston_census) + 
-  tm_polygons(col = "pink", border.col = "red") +
-  tm_layout(main.title = "Census Blackouts",
-            frame = FALSE)
 
-tm_shape(houston_census) +
-  tm_polygons(col = "med_inc", palette = "Reds", title = "Median Income") 
+```{r}
+# ---- Map of census tracts impacted by power outages  ----   
 
-table(houston_census$blackout_status)
+census_map <- tm_shape(houston_census) + 
+  tm_polygons(col = "Blackout",
+          palette = c("Yes" = "#00BFB2",
+                      "No" = "yellow"),
+          border.col = "#07222B",
+          lwd = 0.2) +
+  tm_layout(frame = FALSE,
+            legend.text.color="grey",
+            legend.position = c(0.05, 1),
+            legend.title.color='grey',
+            bg.color = "#07222B",
+            main.title = "Census Blocks in Houston That Were Impacted\nBy Power Outages",
+          main.title.fontface = "bold",
+          main.title.color = "#D3DFEB") +
+  
+   # Edit scale bar
+  tm_scale_bar(color.dark = "#9BB4CC",
+               color.light = "#435058",
+               text.color = "grey",
+               breaks = c(0,10)) +
+  # Edit compass
+  tm_compass(type = "arrow",
+             size = 1,
+             position = c(0.89, 0.09),
+             color.dark = "#9BB4CC",
+             color.light = "grey",
+             text.color = "grey",
+             text.size = .6)
+#table(houston_census$Blackout)
+
+census_map
 ```
 
 ```{r}
-#| code-fold: true
-#| code-summary: "Display Code"
-
 # ---- Plot Difference ----   
 
-ggplot(data = houston_census) +
-  geom_violin(aes(x = med_inc, y = blackout_status, fill = blackout_status)) +
-  labs(
-    x = "Blackout Status",
-    y = "Median Household Income",
-    title = "Income Distribution by Blackout Status"
-  ) +
-  theme_minimal()
 
+ggplot(data = houston_census) +
+  geom_violin(aes(x = med_inc, y = Blackout),
+              fill = "#00BFB2") +
+  labs(
+    x = "Median Household Income",
+    y = "Blackout Status",
+    title = "Income Distribution by Blackout Status") +
+  theme_minimal(base_size = 14) +
+  theme(
+    legend.position = "none",
+    plot.background = element_rect(fill = "#07222B"),
+    panel.background = element_rect(fill = "#07222B",
+                                    color = NA),
+    text = element_text(color = "white"),
+    axis.text = element_text(color = "white"),
+    axis.title = element_text(color = "white"),
+    plot.title = element_text(color = "white",
+                              size = 16,
+                              face = "bold")
+  )
 ```
 
-This project investigates the impact of a severe weather event in 2021 which caused widespread power outages throughout the state of Texas, including Houston. I use NASA Visible Infrared Imaging Radiometer Suite (VIIRS) nighttime imagery to detect night lights to compare the intensity of night lights before and after the first major storm. I also overlayed the imagery with census tract data pertaining to the median household income. I found that the median household income for census tracts that experienced a blackout was slightly higher then the median for tracts that didn't experience an outage. For this project, I did not normalize for area, so it is possible that that could be influencing the median values.
+This project investigates the impact of a severe weather event in 2021 which caused widespread power outages throughout the state of Texas, including Houston. I use NASA Visible Infrared Imaging Radiometer Suite (VIIRS) nighttime imagery to detect night lights to compare the intensity of night lights before and after the first major storm. I also overlayed the imagery with census tract data pertaining to the median household income. I found that the median household income for census tracts that experienced a blackout was slightly higher then the median for tracts that didn't experience an outage. For this project, I did not normalize for area, so it is possible that the difference in sample size of each group could skew the observed median values.
+
+
